# secure-interpreter

./: Dockerfile  README.md  app.py  pyproject.toml
authZ/: app.py
docs/: AzureFileMountSetting.md
open-interpreter-ssh-server/: .env.sample  Dockerfile  app.py  entrypoint.sh  pyproject.toml
secure-interpreter-webssh/: Dockerfile  README.md  handler.py  index.html  page403.html  pyproject.toml
secure-interpreter-webssh-authZ/: Dockerfile  handler.py  index.html
